# execdiff

./: .gitignore  README.md  TEST_GUIDE.md  cli.py  pyproject.toml  test.py
.execdiff/logs/: actions.jsonl
execdiff/: __init__.py  cli.py  live_trace.py
test_action/.execdiff/logs/: actions.jsonl
tests/test_project/: README.md  test_install.py
