[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execdiff"
version = "0.0.1"
description = "Passive execution tracing for file and package changes."
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["execdiff*"]
