[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execdiff"
version = "0.0.12"
description = "Passive execution tracing for file and package changes."
readme = "README.md"
license = "Apache-2.0"
authors = [
	{ name = "Anup Moncy", email = "n93181165@gmail.com" }
]
requires-python = ">=3.8"

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

[project.scripts]
execdiff = "execdiff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["execdiff*"]
